# sentinel_fusion_ai

./: .dockerignore  .gitignore  Dockerfile  Makefile  deploy.sh  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  sentinel_demo.py  train_model.ipynb
benchmarks/baselines/: metrics_baseline.json
benchmarks/history/: bench_history.jsonl
demo/: __init__.py  build_scenarios.py  engine.py  interactive.py  narrative.py  render.py  scenarios.parquet  scenarios_meta.json
deploy/: prometheus.yml
docs/: API.md  BANK_INTEGRATION_IMPROVEMENTS.md  MODEL_V1_VS_V2.md  SUMMARY.md  canonical_schema.md  data_dictionary.md  finspark_export_spec.md  serving.md  unified_schema.md
ml/: __init__.py  benchmark.py  config.py  data.py  evaluate.py  explain.py  feature_core.py  feature_spec.py  features.py  fusion.py  predict.py  run_pipeline.py  score_batch.py  train.py
ml/experiments/: __init__.py  behaviour_champion.py  calibration_check.py  common.py  fraud_search.py
notebooks/: 01_unsw_nb15.ipynb  02_beth.ipynb  03_cicids2017.ipynb  04_creditcard.ipynb  05_paysim.ipynb  06_bank_account_fraud.ipynb  07_rba_logins.ipynb  08_cert_insider.ipynb  09_threat_intel.ipynb  10_quantum_synth.ipynb  11_unify.ipynb  12_feature_engineering.ipynb  13_validation_report.ipynb  _make_nb.py  finspark_gen.py  prep_utils.py
notebooks/src/: 01_unsw_nb15.py  02_beth.py  03_cicids2017.py  04_creditcard.py  05_paysim.py  06_bank_account_fraud.py  07_rba_logins.py  08_cert_insider.py  09_threat_intel.py  10_quantum_synth.py  11_unify.py  12_feature_engineering.py  13_validation_report.py  14_sparkov.py  15_finspark.py
reports/: bank_account_fraud_numeric_summary.csv  bank_account_fraud_stats.json  beth_numeric_summary.csv  beth_stats.json  cert_insider_stats.json  cicids2017_numeric_summary.csv  cicids2017_stats.json  cisa_kev_stats.json  creditcard_numeric_summary.csv  creditcard_stats.json  feature_documentation.json  feodo_stats.json  finspark_synth_stats.json  malicious_urls_stats.json  mitre_attack_stats.json  paysim_numeric_summary.csv  paysim_stats.json  quantum_synth_numeric_summary.csv  quantum_synth_stats.json  rba_numeric_summary.csv  rba_stats.json  sparkov_numeric_summary.csv  sparkov_stats.json  unified_composition.csv  unified_stats.json  unsw_nb15_numeric_summary.csv  unsw_nb15_stats.json  urlhaus_stats.json  validation_report.json  validation_report.md
reports/ml/: MODELS.md  fusion_report.json  metrics_all.json  metrics_behaviour.json  metrics_cyber.json  metrics_fraud.json  metrics_fraud_application.json  metrics_fraud_payment.json  metrics_quantum.json  run_manifest.json  (+7 more)
service/: __init__.py  app.py  auth.py  explain.py  feature_service.py  metrics.py  normalize.py  reasons.py  schemas.py  scorer_service.py  settings.py  store.py
tests/: conftest.py  make_fixture.py
(+32 files in other folders)
